--- a/app/views/staffs/attendance_statistics_for_certain_student.html.erb
+++ b/app/views/staffs/attendance_statistics_for_certain_student.html.erb
@@ -1,24 +1,6 @@
 <div class="col-md-12 text-center mx-auto">
-  <h5>Attendance Statistics for certain Student</h5>
-  <div class="row">
-    <div class="col-md-6 offset-3">
-      <%=form_tag({controller: "staffs", action: "attendance_statistics_for_certain_student"}, method: "get", class: "nifty_form") do %>
-        <div class="form-group">
-          <%= text_field_tag :sam_student_id, nil, autofocus: true, autocomplete: "off", class: "form-control", placeholder: "Enter Student ID" %>
-          </div>
-        <div class="form-group">
-          <%= select_tag :course_id, options_for_select(@courses.map{|course| ["#{course.course_title}", course.id]}), {class: "form-control"}%>
-        </div>
-        <div class="actions">
-          <%= submit_tag "Search", class: "btn btn-primary" %>
-        </div>
-      <% end %>
-      <br>
-    </div>
-  </div>
   
-  
-  <% if !@attendance_on_practicals.nil? %>
+    <% if !@attendance_on_practicals.nil? %>
     <div class="row">
       <div class="col-md-8 offset-2">
     <button type="button" class="btn btn-dark btn-block"><span class="float-left"><%= @student.first_name %> <%= @student.last_name %></span> <span class="float-right">Course: <%= @course.course_title %></span></button>
@@ -45,4 +27,22 @@
     </div>
     </div>
   <% end %>
+  <hr>
+  <h5>Search Attendance Statistics for certain Student</h5>
+  <div class="row">
+    <div class="col-md-6 offset-3">
+      <%=form_tag({controller: "staffs", action: "attendance_statistics_for_certain_student"}, method: "get", class: "nifty_form") do %>
+        <div class="form-group">
+          <%= text_field_tag :sam_student_id, nil, autofocus: true, autocomplete: "off", class: "form-control", placeholder: "Enter Student ID" %>
+          </div>
+        <div class="form-group">
+          <%= select_tag :course_id, options_for_select(@courses.map{|course| ["#{course.course_title}", course.id]}), {class: "form-control"}%>
+        </div>
+        <div class="actions">
+          <%= submit_tag "Search", class: "btn btn-primary" %>
+        </div>
+      <% end %>
+      <br>
+    </div>
+  </div>
 </div>
