--- a/app/views/staffs/practical_details.html.erb
+++ b/app/views/staffs/practical_details.html.erb
@@ -1,6 +1,6 @@
 
-<button type="button" class="btn btn-info btn-block"><span class="float-left"><%= @practical.start_time.strftime("%I:%M %p | %a #{@practical.start_time.day.ordinalize} of %b %Y") %> - Practical</span> <span class="float-right">Student Attended: <strong><%= @practical.attendances.count %></strong></span></button>
-<table class="table table-dark table-hover">
+<button type="button" class="btn btn-dark btn-block"><span class="float-left"><%= @practical.start_time.strftime("%I:%M %p | %a #{@practical.start_time.day.ordinalize} of %b %Y") %> - Practical</span> <span class="float-right">Student Attended: <strong><%= @practical.attendances.count %></strong></span></button>
+<table class="table table-hover">
     <thead>
       <tr>
         <th>ID</th>
