--- a/app/views/staffs/demonstrator_list.html.erb
+++ b/app/views/staffs/demonstrator_list.html.erb
@@ -20,6 +20,7 @@
                         <% if content.empty? %>
                            No demonstrators
                        <% else %>
+                       <div class="table-responsive">
                           <table class="table table-dark table-striped">
                           <thead>
                             <tr>
@@ -40,6 +41,7 @@
                             <% end %>
                           </tbody>
                         </table>
+                        </div>
                         <% end %>
                       </div>
                     </div>
