--- a/app/views/homepages/dashboard.html.erb
+++ b/app/views/homepages/dashboard.html.erb
@@ -1,7 +1,7 @@
 <!--Copyright (c) 2018 Team Foxtrot-->
 <!--Licensed under MIT License-->
 
-<% if ["staff_course_coordinator_and_demonstrator", "staff_course_coordinator", "staff_as_demonstrator", "student_demonstrator"].include?(session[:user_type]) %>
+<% if ["staff_course_coordinator_and_demonstrator", "staff_course_coordinator", "staff_demonstrator", "student_demonstrator"].include?(session[:user_type]) %>
 
 <div class="row text-center text-lg-left">
        <div class="col-lg-3 col-md-4 col-xs-6">
