--- a/app/views/homepages/login.html.erb
+++ b/app/views/homepages/login.html.erb
@@ -1,5 +1,7 @@
   <!--Copyright (c) 2018 Team Foxtrot-->
   <!--Licensed under MIT License-->
+  
+  <!--login form for both students and staff-->
 
 <ul class="nav nav-tabs" role="tablist">
   <li class="nav-item">
