--- a/app/views/manual_attendance_recording/search.html.erb
+++ b/app/views/manual_attendance_recording/search.html.erb
@@ -1,6 +1,8 @@
 <!--Copyright (c) 2018 Team Foxtrot-->
 <!--Licensed under MIT License-->
 
+<!--displays student details including name and ID picture-->
+
   <p>
     <%= image_tag @student.picture.url if @student.picture? %>
   </p>
