--- a/app/views/staffs/practical_details.html.erb
+++ b/app/views/staffs/practical_details.html.erb
@@ -11,6 +11,7 @@
       </tr>
     </thead>
     <tbody>
+      <!--goes through attendance entry list-->
     <% @attendances.each do |attendance| %>
       <tr>
         <td><%= attendance.student.sam_student_id %></td>
