--- a/app/views/staffs/add_demonstrator.html.erb
+++ b/app/views/staffs/add_demonstrator.html.erb
@@ -24,8 +24,10 @@
       </div>
       <div class="form-group">
         <ul>
+          <!--displays a list of the future practicals along with checkboxes-->
           <%=collection_check_boxes(:practical_ids, :practical_ids, @practicals_of_course[course.course_title], :id, :start_time) do |b| %>
           <li>
+            <!--displays practical start time-->
             <%= b.label(:"data-value" => b.value) { b.check_box + "Start time: #{b.text.strftime("%I:%M %p | %a #{b.text.day.ordinalize} of %b %Y")}" } %>
           </li>
           <% end %>
