--- a/app/views/staffs/attendance_statistics.html.erb
+++ b/app/views/staffs/attendance_statistics.html.erb
@@ -3,6 +3,7 @@
 
 <div class="col-md-12 mx-auto">
 <div id="accordion">
+  <!--goes through the hash prepared in the controller-->
 <% @practicals_on_specific_weeks.each do |course_title, content| %>
   <div class="card primary-color">
     <a class="card-link" data-toggle="collapse" href="#<%= course_title %>">
