--- a/app/views/staffs/delete_demonstrator.html.erb
+++ b/app/views/staffs/delete_demonstrator.html.erb
@@ -23,6 +23,7 @@
 <% if !@hash.nil? %>
   <p> University ID number of the Demonstrator: <b><%= params[:sam_id] %> </b> </p>
   <div id="accordion">
+  <!--goes through the hash prepared in the controller-->
   <% @hash.each do |course, practicals| %>
     <% if !practicals.empty? %>
       <div class="card primary-color">
