--- a/app/views/homepages/dashboard.html.erb
+++ b/app/views/homepages/dashboard.html.erb
@@ -80,7 +80,7 @@
 
 <% if ["staff_without_course", "student"].include?(session[:user_type]) %>
   <div class="col-12">  
-    <h3>You do not have access to any of the feature at the moment...</h3>
+    <h3>You do not have access to any of the features at the moment...</h3>
     <h4>You should look forward SAM v2.0 !</h4>
   </div>
 <% end %>
